<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <!-- Starting of the Sliding Panel -->

    <LinearLayout
        android:id="@+id/slidingpanel"
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white"
        android:orientation="vertical"
        android:visibility="visible" >

        <LinearLayout
            android:id="@+id/con_profile_data"
            android:layout_width="fill_parent"
            android:layout_height="80dp"
            android:background="@android:color/white"
            android:orientation="horizontal" >

            <ImageView
                android:id="@+id/img_profile_local"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/no_image" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:orientation="vertical" >

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" >

                    <TextView
                        android:id="@+id/txt_username"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:layout_marginTop="15dp"
                        android:text="Susan Cross"
                        android:textColor="@color/tribewire_black"
                        android:textSize="14sp"
                        android:textStyle="bold" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="9dp"
                        android:background="@drawable/icons_status_online" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:orientation="horizontal" >

                    <TextView
                        android:id="@+id/txt_status"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Status: "
                        android:textColor="@color/tribewire_black"
                        android:textSize="14sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/txt_status_online"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Online"
                        android:textColor="@color/blue"
                        android:textSize="14sp"
                        android:textStyle="bold" />
                </LinearLayout>

                <TextView
                    android:id="@+id/txt_sign_out"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:text="@string/singout"
                    android:textColor="@color/tribewire_grey"
                    android:textSize="12sp"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="2dp"
            android:background="@drawable/list_divider" />

        <RelativeLayout
            android:id="@+id/con_allconversation"
            android:layout_width="fill_parent"
            android:layout_height="55dp"
            android:background="@android:color/white" >

            <ImageView
                android:id="@+id/img_icon_all_conversation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="15dp"
                android:background="@drawable/allconversations_50x50" />

            <TextView
                android:id="@+id/txt_all_conversation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="5dp"
                android:layout_toRightOf="@id/img_icon_all_conversation"
                android:text="@string/allConversation"
                android:textColor="@color/tribewire_black"
                android:textSize="14sp" />
        </RelativeLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="2dp"
            android:background="@drawable/list_divider" />

        <RelativeLayout
            android:id="@+id/con_company_fyi"
            android:layout_width="fill_parent"
            android:layout_height="55dp"
            android:background="@android:color/white" >

            <ImageView
                android:id="@+id/img_icon_fyi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="17dp"
                android:background="@drawable/fyi_unread_30x30" />

            <TextView
                android:id="@+id/txt_company_fyi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="15dp"
                android:layout_toRightOf="@id/img_icon_fyi"
                android:text="@string/companyFyu"
                android:textColor="@color/tribewire_black"
                android:textSize="14sp" />
        </RelativeLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="2dp"
            android:background="@drawable/list_divider" />

        <RelativeLayout
            android:id="@+id/con_contacts"
            android:layout_width="fill_parent"
            android:layout_height="55dp"
            android:background="@android:color/white" >

            <ImageView
                android:id="@+id/img_icon_contacts"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:background="@drawable/contacts_50x50" />

            <TextView
                android:id="@+id/txt_contact_groups"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:layout_toRightOf="@id/img_icon_contacts"
                android:text="@string/contacts"
                android:textColor="@color/tribewire_black"
                android:textSize="14sp" />
        </RelativeLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="2dp"
            android:background="@drawable/list_divider" />

        <RelativeLayout
            android:id="@+id/con_groups"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:background="@android:color/white"
            android:visibility="gone" >

            <TextView
                
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:text="@string/Groups"
                android:textColor="@android:color/black"
                android:textSize="14sp" />
        </RelativeLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="2dp"
            android:background="@drawable/list_divider"
            android:visibility="gone" />

        <RelativeLayout
            android:id="@+id/con_emergency"
            android:layout_width="fill_parent"
            android:layout_height="55dp"
            android:background="@android:color/white" >

            <ImageView
                android:id="@+id/img_icon_emergency"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:background="@drawable/emergency_new_50x50" />

            <TextView
                android:id="@+id/txt_emergency"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:layout_toRightOf="@id/img_icon_emergency"
                android:text="@string/emergency"
                android:textColor="@color/tribewire_black"
                android:textSize="14sp" />
        </RelativeLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="2dp"
            android:background="@drawable/list_divider" />
    </LinearLayout>

</LinearLayout>